documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef unsigned long LISTADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L43W32API LPVOID __stdcall L43_FileOpenWrite(LPCSTR filename);

L43W32API BOOL __stdcall L43_FileRead(LPVOID handle,LPVOID buffer,USHORT count);

L43W32API BOOL __stdcall L43_FileSeek(LPVOID handle,ULONG offset);

L43W32API ULONG __stdcall L43_FileTell(LPVOID handle);

L43W32API BOOL __stdcall L43_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

L43W32API ULONG __stdcall L43_FilterAddr(INT labelval,INT sdival,INT channum,HCARD handleval);

L43W32API BASEADDR __stdcall L43_FilterCreate(HCARD handleval);

L43W32API ERRVAL __stdcall L43_FilterFill(MSGADDR msgaddr,BASEADDR baseaddr,HCARD handleval);

L43W32API USHORT __stdcall L43_FldGetParBit(ULONG msgval);

L43W32API ULONG __stdcall L43_FldPutParBit(ULONG msgval);

L43W32API USHORT __stdcall L43_GetHigh(ULONG val);

L43W32API USHORT __stdcall L43_GetLow(ULONG val);

L43W32API USHORT __stdcall L43_GlobalRdW(USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleClose(HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleDel(HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleGet(LPSTR cardstr,LPINT cardnum,LPINT devnum,LPULONG sizval,HCARD handleval);

L43W32API HCARD __stdcall L43_HandleIns(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L43W32API BOOL __stdcall L43_HandleOkay(HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleOpen(LPCSTR cardname,INT cardnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleOpenWin95(LPCSTR cardname,INT cardnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleOpenWinNT(LPCSTR cardname,INT cardnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleVer(HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleVerPLX(HCARD handleval);

L43W32API ULONG __stdcall L43_HeapAlloc(ULONG wordcount,HCARD handleval);

L43W32API ULONG __stdcall L43_HeapAllocAll(LPULONG wordcount,HCARD handleval);

L43W32API ULONG __stdcall L43_HeapAllocAllDPM(LPUSHORT wordcount,HCARD handleval);

L43W32API ULONG __stdcall L43_HeapAllocDPM(USHORT wordcount,HCARD handleval);

L43W32API ULONG __stdcall L43_HeapAllocEx(USHORT configval,ULONG wordcount,HCARD handleval);

L43W32API ULONG __stdcall L43_HeapWipe(HCARD handleval);

L43W32API ULONG __stdcall L43_HeapWipeDPM(HCARD handleval);

L43W32API USHORT __stdcall L43_IndirectRd(INT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_IndirectWr(USHORT value,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntDisable(HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntEnable(HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntEnableCond(HCARD handleval);

L43W32API LPVOID __stdcall L43_IntGet(HCARD handleval);

L43W32API USHORT __stdcall L43_IORdW(INT addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_IOWINRdW(USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_IOWINWrW(USHORT value,USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_IOWrW(USHORT value,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernDev(LPINT valueptr,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernEnd(LPVOID vxdptr);

L43W32API ERRVAL __stdcall L43_KernIntClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernIntInstall(LPVOID hEvent,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernIntStatus(LPINT valueptr,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernIntUninstall(HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernIORdW(LPUSHORT valueptr,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernIOWrW(USHORT value,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMFillW(USHORT value,INT addrval,INT countval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMRdL(LPULONG valueptr,INT addrval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMRdsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMRdsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMRdW(LPUSHORT valueptr,INT addrval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMWrL(ULONG value,INT addrval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMWrsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMWrsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernMEMWrW(USHORT value,INT addrval,INT bustype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernQuick(BOOL flag,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernStatus(LPULONG valueptr,ULONG type,HCARD handleval);

L43W32API ERRVAL __stdcall L43_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

L43W32API ULONG __stdcall L43_LabelReverse(ULONG msgval);

L43W32API ULONG __stdcall L43_ListAddr(INT index,LISTADDR listaddr,HCARD handleval);

L43W32API ULONG __stdcall L43_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header);

L43W32API ERRVAL __stdcall L43_ListAdvance(LISTADDR listaddr,HCARD handleval);

L43W32API ERRVAL __stdcall L43_ListClear(LISTADDR listaddr,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListConfig(ULONG configval,INT count,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListConfigEx(ULONG configval,INT count,HCARD handleval);

L43W32API BOOL __stdcall L43_ListDataBlkWr(LPULONG dataptr,USHORT datacount,LISTADDR listaddr,HCARD handleval);

L43W32API ULONG __stdcall L43_ListDataRdEx(INT index,LISTADDR listaddr,HCARD handleval);

L43W32API VOID __stdcall L43_ListDataWrEx(ULONG value,INT index,LISTADDR listaddr,HCARD handleval);

L43W32API ERRVAL __stdcall L43_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCARD handleval);

L43W32API ULONG __stdcall L43_ListNextRd(ULONG listaddr,LPUSHORT header);

L43W32API ULONG __stdcall L43_ListNextWr(ULONG listaddr,LPUSHORT header);

L43W32API VOID __stdcall L43_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);