documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32VB.BAS

Public Declare Function L43_FileOpenWrite Lib "L43W32.DLL" Alias "_L43_FileOpenWrite@4" (ByRef filename As String) As Long
Public Declare Function L43_FileRead Lib "L43W32.DLL" Alias "_L43_FileRead@12" (ByRef handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function L43_FileSeek Lib "L43W32.DLL" Alias "_L43_FileSeek@8" (ByRef handle As Long, ByVal offset As Long) As Long
Public Declare Function L43_FileTell Lib "L43W32.DLL" Alias "_L43_FileTell@4" (ByRef handle As Long) As Long
Public Declare Function L43_FileWrite Lib "L43W32.DLL" Alias "_L43_FileWrite@12" (ByRef handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function L43_FilterAddr Lib "L43W32.DLL" Alias "_L43_FilterAddr@16" (ByVal labelval As Long, ByVal sdival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FilterCreate Lib "L43W32.DLL" Alias "_L43_FilterCreate@4" (ByVal handleval As Long) As Long
Public Declare Function L43_FilterFill Lib "L43W32.DLL" Alias "_L43_FilterFill@12" (ByVal msgaddr As Long, ByVal basevaladdr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_FldGetParBit Lib "L43W32.DLL" Alias "_L43_FldGetParBit@4" (ByVal msgval As Long) As Integer
Public Declare Function L43_FldPutParBit Lib "L43W32.DLL" Alias "_L43_FldPutParBit@4" (ByVal msgval As Long) As Long
Public Declare Function L43_GetHigh Lib "L43W32.DLL" Alias "_L43_GetHigh@4" (ByVal val As Long) As Integer
Public Declare Function L43_GetLow Lib "L43W32.DLL" Alias "_L43_GetLow@4" (ByVal val As Long) As Integer
Public Declare Function L43_GlobalRdW Lib "L43W32.DLL" Alias "_L43_GlobalRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function L43_GlobalWrW Lib "L43W32.DLL" Alias "_L43_GlobalWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_HandleClose Lib "L43W32.DLL" Alias "_L43_HandleClose@4" (ByVal handleval As Long) As Long
Public Declare Function L43_HandleDel Lib "L43W32.DLL" Alias "_L43_HandleDel@4" (ByVal handleval As Long) As Long
Public Declare Function L43_HandleGet Lib "L43W32.DLL" Alias "_L43_HandleGet@20" (ByRef cardstr As String, ByRef cardnum As Long, ByRef devnum As Long, ByRef sizval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_HandleIns Lib "L43W32.DLL" Alias "_L43_HandleIns@16" (ByRef cardname As String, ByVal cardnum As Long, ByRef happwnd As Long, ByVal uiremovalmsg As Integer) As Long
Public Declare Function L43_HandleOkay Lib "L43W32.DLL" Alias "_L43_HandleOkay@4" (ByVal handleval As Long) As Long
Public Declare Function L43_HandleOpen Lib "L43W32.DLL" Alias "_L43_HandleOpen@12" (ByRef cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_HandleOpenWin95 Lib "L43W32.DLL" Alias "_L43_HandleOpenWin95@12" (ByRef cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_HandleOpenWinNT Lib "L43W32.DLL" Alias "_L43_HandleOpenWinNT@12" (ByRef cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_HandleVer Lib "L43W32.DLL" Alias "_L43_HandleVer@4" (ByVal handleval As Long) As Long
Public Declare Function L43_HandleVerPLX Lib "L43W32.DLL" Alias "_L43_HandleVerPLX@4" (ByVal handleval As Long) As Long
Public Declare Function L43_HeapAlloc Lib "L43W32.DLL" Alias "_L43_HeapAlloc@8" (ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function L43_HeapAllocAll Lib "L43W32.DLL" Alias "_L43_HeapAllocAll@8" (ByRef wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function L43_HeapAllocAllDPM Lib "L43W32.DLL" Alias "_L43_HeapAllocAllDPM@8" (ByRef wordcount As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_HeapAllocDPM Lib "L43W32.DLL" Alias "_L43_HeapAllocDPM@8" (ByVal wordcount As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_HeapAllocEx Lib "L43W32.DLL" Alias "_L43_HeapAllocEx@12" (ByVal configval As Integer, ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function L43_HeapWipe Lib "L43W32.DLL" Alias "_L43_HeapWipe@4" (ByVal handleval As Long) As Long
Public Declare Function L43_HeapWipeDPM Lib "L43W32.DLL" Alias "_L43_HeapWipeDPM@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IndirectRd Lib "L43W32.DLL" Alias "_L43_IndirectRd@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_IndirectWr Lib "L43W32.DLL" Alias "_L43_IndirectWr@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_IntClear Lib "L43W32.DLL" Alias "_L43_IntClear@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IntDisable Lib "L43W32.DLL" Alias "_L43_IntDisable@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IntEnable Lib "L43W32.DLL" Alias "_L43_IntEnable@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IntEnableCond Lib "L43W32.DLL" Alias "_L43_IntEnableCond@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IntGet Lib "L43W32.DLL" Alias "_L43_IntGet@4" (ByVal handleval As Long) As Long
Public Declare Function L43_IORdW Lib "L43W32.DLL" Alias "_L43_IORdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_IOWINRdW Lib "L43W32.DLL" Alias "_L43_IOWINRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function L43_IOWINWrW Lib "L43W32.DLL" Alias "_L43_IOWINWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_IOWrW Lib "L43W32.DLL" Alias "_L43_IOWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernDev Lib "L43W32.DLL" Alias "_L43_KernDev@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernEnd Lib "L43W32.DLL" Alias "_L43_KernEnd@4" (ByRef vxdptr As Long) As Long
Public Declare Function L43_KernIntClear Lib "L43W32.DLL" Alias "_L43_KernIntClear@4" (ByVal handleval As Long) As Long
Public Declare Function L43_KernIntInstall Lib "L43W32.DLL" Alias "_L43_KernIntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernIntParam Lib "L43W32.DLL" Alias "_L43_KernIntParam@32" (ByVal clraddr As Long, ByVal clrwidth As Long, ByVal clrvalue As Long, ByVal stataddr As Long, ByVal statwidth As Long, ByVal statvalue As Long, ByVal statmask As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernIntStatus Lib "L43W32.DLL" Alias "_L43_KernIntStatus@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernIntUninstall Lib "L43W32.DLL" Alias "_L43_KernIntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function L43_KernIORdW Lib "L43W32.DLL" Alias "_L43_KernIORdW@12" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernIOWrW Lib "L43W32.DLL" Alias "_L43_KernIOWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMFillW Lib "L43W32.DLL" Alias "_L43_KernMEMFillW@20" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMRdL Lib "L43W32.DLL" Alias "_L43_KernMEMRdL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMRdsL Lib "L43W32.DLL" Alias "_L43_KernMEMRdsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMRdsW Lib "L43W32.DLL" Alias "_L43_KernMEMRdsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMRdW Lib "L43W32.DLL" Alias "_L43_KernMEMRdW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMWrL Lib "L43W32.DLL" Alias "_L43_KernMEMWrL@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMWrsL Lib "L43W32.DLL" Alias "_L43_KernMEMWrsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMWrsW Lib "L43W32.DLL" Alias "_L43_KernMEMWrsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernMEMWrW Lib "L43W32.DLL" Alias "_L43_KernMEMWrW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernQuick Lib "L43W32.DLL" Alias "_L43_KernQuick@8" (ByVal flag As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernStatus Lib "L43W32.DLL" Alias "_L43_KernStatus@12" (ByRef valueptr As Long, ByVal typeval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_KernStatusEx Lib "L43W32.DLL" Alias "_L43_KernStatusEx@16" (ByRef valueptr As Long, ByVal typeval As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function L43_LabelReverse Lib "L43W32.DLL" Alias "_L43_LabelReverse@4" (ByVal msgval As Long) As Long
Public Declare Function L43_ListAddr Lib "L43W32.DLL" Alias "_L43_ListAddr@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListAddrEx Lib "L43W32.DLL" Alias "_L43_ListAddrEx@12" (ByVal index As Long, ByVal listaddr As Long, ByRef header As Integer) As Long
Public Declare Function L43_ListAdvance Lib "L43W32.DLL" Alias "_L43_ListAdvance@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListClear Lib "L43W32.DLL" Alias "_L43_ListClear@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListConfig Lib "L43W32.DLL" Alias "_L43_ListConfig@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListConfigEx Lib "L43W32.DLL" Alias "_L43_ListConfigEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListDataBlkWr Lib "L43W32.DLL" Alias "_L43_ListDataBlkWr@16" (ByRef dataptr As Long, ByVal datacount As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListDataRdEx Lib "L43W32.DLL" Alias "_L43_ListDataRdEx@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListDataWrEx Lib "L43W32.DLL" Alias "_L43_ListDataWrEx@16" (ByVal value As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListInit Lib "L43W32.DLL" Alias "_L43_ListInit@12" (ByVal listaddr As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ListNextRd Lib "L43W32.DLL" Alias "_L43_ListNextRd@8" (ByVal listaddr As Long, ByRef header As Integer) As Long
Public Declare Function L43_ListNextWr Lib "L43W32.DLL" Alias "_L43_ListNextWr@8" (ByVal listaddr As Long, ByRef header As Integer) As Long
Public Declare Function L43_ListPostRd Lib "L43W32.DLL" Alias "_L43_ListPostRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
